making activitynaterialvideo, activity_questions.xml, activity_questions_discussion.xml,item_layout_questions, activity_quiz_result.xml, adding binding and intent on LoginActivity, some changes on string, themes for bg on drawable

--- a/app/src/main/res/layout/activity_nahwu_list.xml
+++ b/app/src/main/res/layout/activity_nahwu_list.xml
@@ -91,6 +91,7 @@
             app:layout_constraintTop_toBottomOf="@id/tv_titlematerialnahwu_before_uts">
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_materialnahwu_before_uts"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -147,6 +148,7 @@
             app:layout_constraintTop_toBottomOf="@id/tv_titlematerialnahwu_after_uts">
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_materialnahwu_after_uts"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
