making activitynaterialvideo, activity_questions.xml, activity_questions_discussion.xml,item_layout_questions, activity_quiz_result.xml, adding binding and intent on LoginActivity, some changes on string, themes for bg on drawable

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -184,9 +184,10 @@
         android:layout_width="0dp"
         android:layout_height="62dp"
         android:layout_marginTop="55dp"
-        android:enabled="false"
+        android:enabled="true"
         android:fontFamily="@font/poppins_bold"
         android:text="Register"
+        android:textColor="@color/black"
         android:textSize="14sp"
         android:textStyle="bold"
         app:backgroundTint="@color/shadeofblue"
