--- a/app/src/main/res/layout/activity_material_detail.xml
+++ b/app/src/main/res/layout/activity_material_detail.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MaterialDetailActivity">
+    tools:context=".Activity.MaterialDetailActivity">
 
     <ImageView
         android:id="@+id/ic_back_material_detail"
