--- a/app/src/main/res/layout/activity_quiz_result.xml
+++ b/app/src/main/res/layout/activity_quiz_result.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".QuizResultActivity">
+    tools:context=".Activity.QuizResultActivity">
 
     <ImageView
         android:id="@+id/ic_back_questions_result"
