--- a/app/src/main/res/layout/activity_sharaf_list.xml
+++ b/app/src/main/res/layout/activity_sharaf_list.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SharafListActivity">
+    tools:context=".Activity.SharafListActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -91,6 +91,7 @@
             app:layout_constraintTop_toBottomOf="@id/tv_titlematerialsharaf_before_uts">
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_sharaf_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
