--- a/app/src/main/res/layout/activity_material_video.xml
+++ b/app/src/main/res/layout/activity_material_video.xml
@@ -16,14 +16,27 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/tv_materialvideo_bab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Materi 1"
+        android:fontFamily="@font/poppins_bold"
+        app:layout_constraintTop_toTopOf="@+id/ic_back_material_video"
+        app:layout_constraintBottom_toBottomOf="@+id/ic_back_material_video"
+        app:layout_constraintStart_toStartOf="@+id/tv_materialvideo_title"
+        app:layout_constraintEnd_toEndOf="@+id/tv_materialvideo_title"
+        />
+
+    <TextView
         android:id="@+id/tv_materialvideo_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Teori Dasar Nahwu"
         android:fontFamily="@font/poppins_bold"
-        android:text="Title"
-        app:layout_constraintStart_toEndOf="@+id/ic_back_material_video"
-        app:layout_constraintTop_toTopOf="@+id/ic_back_material_video"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@+id/ic_back_material_video"
+        app:layout_constraintStart_toStartOf="@+id/ic_back_material_video"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
 
     <WebView
         android:id="@+id/wv_video"
