--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -11,7 +11,7 @@
         android:id="@+id/iv_logo_register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/img_logo"
+        android:src="@drawable/img_logofix"
         android:layout_marginTop="100dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -38,7 +38,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="10dp"
-        android:text="Create an account to NASHO LEARN to get all features"
+        android:text="Create an account to TANUSHA to get all features"
         android:fontFamily="@font/poppins_regular"
         app:layout_constraintTop_toBottomOf="@+id/tv_welcome_register"
         app:layout_constraintStart_toStartOf="parent"
