--- a/app/src/main/res/layout/activity_material_detail.xml
+++ b/app/src/main/res/layout/activity_material_detail.xml
@@ -41,22 +41,22 @@
         app:layout_constraintEnd_toEndOf="parent"
         />
 
-    <TextView
-        android:id="@+id/tv_materi_detail"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_materialdetail_title"
-        app:layout_constraintBottom_toTopOf="@+id/btn_watch_video"
-        />
-
-<!--    <com.github.barteksc.pdfviewer.PDFView-->
-<!--        android:id="@+id/pdf_view"-->
+<!--    <TextView-->
+<!--        android:id="@+id/tv_materi_detail"-->
 <!--        android:layout_width="match_parent"-->
 <!--        android:layout_height="0dp"-->
-<!--        android:paddingVertical="8dp"-->
 <!--        app:layout_constraintTop_toBottomOf="@+id/tv_materialdetail_title"-->
 <!--        app:layout_constraintBottom_toTopOf="@+id/btn_watch_video"-->
 <!--        />-->
+
+    <com.github.barteksc.pdfviewer.PDFView
+        android:id="@+id/pdf_view"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:paddingVertical="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/tv_materialdetail_title"
+        app:layout_constraintBottom_toTopOf="@+id/btn_watch_video"
+        />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_watch_video"
