fix quiz_history and intent from register

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -138,7 +138,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Enter your password"
-            android:inputType="text|textEmailAddress"
+            android:inputType="textPassword"
             android:maxLines="1"
             android:textSize="14sp"
             app:hintEnabled="false"
@@ -171,7 +171,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Confirm your password"
-            android:inputType="text|textEmailAddress"
+            android:inputType="textPassword"
             android:maxLines="1"
             android:textSize="14sp"
             app:hintEnabled="false"
